<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/trainFragment"
            android:icon="@android:drawable/btn_star"
            android:title="@string/action_train" />
        <item
            android:id="@+id/trainingListFragment"
            android:icon="@android:drawable/ic_dialog_dialer"
            android:title="@string/action_list" />
    </group>

    <item android:title="@string/group_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@android:drawable/ic_dialog_email"
                android:title="@string/action_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@android:drawable/ic_menu_share"
                android:title="@string/action_send" />
        </menu>
    </item>
</menu>